set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/CppBase)
add_executable(demo0_main demo0_main.cpp)
add_executable(demo1_identifier demo1_identifier.cpp)
add_executable(demo2_dataType demo2_dataType.cpp)
add_executable(demo3_operator demo3_operator.cpp)
add_executable(demo4_ifsentence demo4_ifsentence.cpp)
add_executable(demo5_whilesentence demo5_whilesentence.cpp)
add_executable(demo6_forsentence demo6_forsentence.cpp)
add_executable(demo7_array demo7_array.cpp)
add_executable(demo8_functions demo8_functions.cpp)
add_executable(demo9_adress demo9_adress.cpp)
add_executable(demo10_struct demo10_struct.cpp)
add_executable(demo11_headfile demo11_head.cpp demo11_headfile.cpp)