set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/CppSTL)
add_executable(demo01_container_string demo01_container_string.cpp)
add_executable(demo02_container_vector demo02_container_vector.cpp)
add_executable(demo03_container_deque demo03_container_deque.cpp)
add_executable(demo04_container_stack_queue demo04_container_stack_queue.cpp)
add_executable(demo05_container_list demo05_container_list.cpp)
add_executable(demo06_container_set_multimap demo06_container_set_multimap.cpp)
add_executable(demo07_container_map_multimap demo07_container_map_multimap.cpp)

add_executable(demo11_thread demo11_thread.cpp)
add_executable(demo14_yaml demo14_yaml.cpp)
target_link_libraries(demo14_yaml ${OpenCV_LIBS})